<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_next_events"
            android:title="@string/next_events"
            android:icon="@drawable/ic_drawable_next_events"/>

        <item
            android:id="@+id/nav_all_events"
            android:title="@string/all_events"
            android:icon="@drawable/ic_drawable_all_events"/>
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:title="@string/feedback"
                android:icon="@drawable/ic_drawable_feedback"/>

            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout"
                android:icon="@drawable/ic_drawable_logout"/>
        </menu>
    </item>
</menu>